--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
     <nav >
-<div class="nav-contaner" >
+<div id="nav-contaner" >
         <div id="website-logo">
-            <a class="logo">Start Bootstrap</a>
+            <a class="logo" href="#">Start Bootstrap</a>
         </div>
 
         <ul class="website-navigation">
@@ -121,7 +121,8 @@
        </div >
        <div class="">
         <h2>About Freelancer</h2>
-        <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap .</p>
+        <p>Freelance is a free to use, MIT licensed Bootstrap 
+            theme created by Start Bootstrap .</p>
        </div>
        <div class="copy">
       
